feat: add oauth authentication and full data validation
