# routes/categories.js
@@ -1,5 +1,6 @@
 const express = require('express');
 const router = express.Router();
+const { isAuthenticated } = require('../middleware/auth');
 
 const {
     getAllCategories,
@@ -9,20 +10,15 @@ const {
     deleteCategory,
 } = require('../controllers/categories.controller');
 
+// public routes
 //Get all 
 router.get('/', getAllCategories);
-
 //get by id
 router.get('/:id', getCategoryById);
 
-//create category
-router.post('/', createCategory);
-
-//update category
-router.put('/:id', updateCategory);
-
-// delete category 
-router.delete('/:id', deleteCategory);
-
+// Protected Routes
+router.post('/', isAuthenticated, createCategory);
+router.put('/:id', isAuthenticated, updateCategory);
+router.delete('/:id', isAuthenticated, deleteCategory);
 
 module.exports = router;
