# routes/index.js
@@ -1,8 +1,9 @@
 const express = require('express');
 const router = express.Router();
+const authRoutes = require('./auth'); 
+router.use('/auth', authRoutes);
 
 router.use('/products', require('./products'));
 router.use('/categories', require('./categories'));
 
 module.exports = router;
-
